versions/0.8.0/_sources/refs/_aws-cdk_aws-kinesisfirehose.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"hEOvj50PJVPn0uqOilw6eoWqYZ3AT/rgjkMfAH7KDzY="}

@aws-cdk/aws-kinesisfirehose
============================

.. mdinclude:: ./__aws-cdk_aws-kinesisfirehose.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-kinesisfirehose

DeliveryStreamArn
^^^^^^^^^^^^^^^^^

.. py:class:: DeliveryStreamArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-kinesisfirehose.cloudformation

DeliveryStreamResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeliveryStreamResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DeliveryStreamResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DeliveryStreamResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: deliveryStreamArn

      :type: :py:class:`~@aws-cdk/aws-kinesisfirehose.DeliveryStreamArn` *(readonly)*

   .. py:class:: BufferingHintsProperty



      .. py:attribute:: intervalInSeconds

         ``DeliveryStreamResource.BufferingHintsProperty.IntervalInSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-bufferinghints.html#cfn-kinesisfirehose-deliverystream-bufferinghints-intervalinseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sizeInMBs

         ``DeliveryStreamResource.BufferingHintsProperty.SizeInMBs``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-bufferinghints.html#cfn-kinesisfirehose-deliverystream-bufferinghints-sizeinmbs


         :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: CloudWatchLoggingOptionsProperty



      .. py:attribute:: enabled

         ``DeliveryStreamResource.CloudWatchLoggingOptionsProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-cloudwatchloggingoptions.html#cfn-kinesisfirehose-deliverystream-cloudwatchloggingoptions-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: logGroupName

         ``DeliveryStreamResource.CloudWatchLoggingOptionsProperty.LogGroupName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-cloudwatchloggingoptions.html#cfn-kinesisfirehose-deliverystream-cloudwatchloggingoptions-loggroupname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: logStreamName

         ``DeliveryStreamResource.CloudWatchLoggingOptionsProperty.LogStreamName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-cloudwatchloggingoptions.html#cfn-kinesisfirehose-deliverystream-cloudwatchloggingoptions-logstreamname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: CopyCommandProperty



      .. py:attribute:: copyOptions

         ``DeliveryStreamResource.CopyCommandProperty.CopyOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-copycommand.html#cfn-kinesisfirehose-deliverystream-copycommand-copyoptions


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: dataTableColumns

         ``DeliveryStreamResource.CopyCommandProperty.DataTableColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-copycommand.html#cfn-kinesisfirehose-deliverystream-copycommand-datatablecolumns


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: dataTableName

         ``DeliveryStreamResource.CopyCommandProperty.DataTableName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-copycommand.html#cfn-kinesisfirehose-deliverystream-copycommand-datatablename


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ElasticsearchBufferingHintsProperty



      .. py:attribute:: intervalInSeconds

         ``DeliveryStreamResource.ElasticsearchBufferingHintsProperty.IntervalInSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchbufferinghints.html#cfn-kinesisfirehose-deliverystream-elasticsearchbufferinghints-intervalinseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sizeInMBs

         ``DeliveryStreamResource.ElasticsearchBufferingHintsProperty.SizeInMBs``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchbufferinghints.html#cfn-kinesisfirehose-deliverystream-elasticsearchbufferinghints-sizeinmbs


         :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ElasticsearchDestinationConfigurationProperty



      .. py:attribute:: bufferingHints

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.BufferingHints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-bufferinghints


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ElasticsearchBufferingHintsProperty`


      .. py:attribute:: cloudWatchLoggingOptions

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.CloudWatchLoggingOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-cloudwatchloggingoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.CloudWatchLoggingOptionsProperty` or undefined


      .. py:attribute:: domainArn

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.DomainARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-domainarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: indexName

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.IndexName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-indexname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: indexRotationPeriod

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.IndexRotationPeriod``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-indexrotationperiod


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: processingConfiguration

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.ProcessingConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-processingconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ProcessingConfigurationProperty` or undefined


      .. py:attribute:: retryOptions

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.RetryOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-retryoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ElasticsearchRetryOptionsProperty`


      .. py:attribute:: roleArn

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3BackupMode

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.S3BackupMode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-s3backupmode


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3Configuration

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.S3Configuration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-s3configuration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.S3DestinationConfigurationProperty`


      .. py:attribute:: typeName

         ``DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty.TypeName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration-typename


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ElasticsearchRetryOptionsProperty



      .. py:attribute:: durationInSeconds

         ``DeliveryStreamResource.ElasticsearchRetryOptionsProperty.DurationInSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-elasticsearchretryoptions.html#cfn-kinesisfirehose-deliverystream-elasticsearchretryoptions-durationinseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: EncryptionConfigurationProperty



      .. py:attribute:: kmsEncryptionConfig

         ``DeliveryStreamResource.EncryptionConfigurationProperty.KMSEncryptionConfig``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-encryptionconfiguration.html#cfn-kinesisfirehose-deliverystream-encryptionconfiguration-kmsencryptionconfig


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.KMSEncryptionConfigProperty` or undefined


      .. py:attribute:: noEncryptionConfig

         ``DeliveryStreamResource.EncryptionConfigurationProperty.NoEncryptionConfig``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-encryptionconfiguration.html#cfn-kinesisfirehose-deliverystream-encryptionconfiguration-noencryptionconfig


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ExtendedS3DestinationConfigurationProperty



      .. py:attribute:: bucketArn

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.BucketARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-bucketarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: bufferingHints

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.BufferingHints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-bufferinghints


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.BufferingHintsProperty`


      .. py:attribute:: cloudWatchLoggingOptions

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.CloudWatchLoggingOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-cloudwatchloggingoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.CloudWatchLoggingOptionsProperty` or undefined


      .. py:attribute:: compressionFormat

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.CompressionFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-compressionformat


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: encryptionConfiguration

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.EncryptionConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-encryptionconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.EncryptionConfigurationProperty` or undefined


      .. py:attribute:: prefix

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.Prefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-prefix


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: processingConfiguration

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.ProcessingConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-processingconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ProcessingConfigurationProperty` or undefined


      .. py:attribute:: roleArn

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3BackupConfiguration

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.S3BackupConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-s3backupconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.S3DestinationConfigurationProperty` or undefined


      .. py:attribute:: s3BackupMode

         ``DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty.S3BackupMode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-extendeds3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration-s3backupmode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: KMSEncryptionConfigProperty



      .. py:attribute:: awskmsKeyArn

         ``DeliveryStreamResource.KMSEncryptionConfigProperty.AWSKMSKeyARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-kmsencryptionconfig.html#cfn-kinesisfirehose-deliverystream-kmsencryptionconfig-awskmskeyarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: KinesisStreamSourceConfigurationProperty



      .. py:attribute:: kinesisStreamArn

         ``DeliveryStreamResource.KinesisStreamSourceConfigurationProperty.KinesisStreamARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-kinesisstreamsourceconfiguration.html#cfn-kinesisfirehose-deliverystream-kinesisstreamsourceconfiguration-kinesisstreamarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``DeliveryStreamResource.KinesisStreamSourceConfigurationProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-kinesisstreamsourceconfiguration.html#cfn-kinesisfirehose-deliverystream-kinesisstreamsourceconfiguration-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ProcessingConfigurationProperty



      .. py:attribute:: enabled

         ``DeliveryStreamResource.ProcessingConfigurationProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-processingconfiguration.html#cfn-kinesisfirehose-deliverystream-processingconfiguration-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: processors

         ``DeliveryStreamResource.ProcessingConfigurationProperty.Processors``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-processingconfiguration.html#cfn-kinesisfirehose-deliverystream-processingconfiguration-processors


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ProcessorProperty` or undefined


   .. py:class:: ProcessorParameterProperty



      .. py:attribute:: parameterName

         ``DeliveryStreamResource.ProcessorParameterProperty.ParameterName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-processorparameter.html#cfn-kinesisfirehose-deliverystream-processorparameter-parametername


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: parameterValue

         ``DeliveryStreamResource.ProcessorParameterProperty.ParameterValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-processorparameter.html#cfn-kinesisfirehose-deliverystream-processorparameter-parametervalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ProcessorProperty



      .. py:attribute:: parameters

         ``DeliveryStreamResource.ProcessorProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-processor.html#cfn-kinesisfirehose-deliverystream-processor-parameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ProcessorParameterProperty`


      .. py:attribute:: type

         ``DeliveryStreamResource.ProcessorProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-processor.html#cfn-kinesisfirehose-deliverystream-processor-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RedshiftDestinationConfigurationProperty



      .. py:attribute:: cloudWatchLoggingOptions

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.CloudWatchLoggingOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-cloudwatchloggingoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.CloudWatchLoggingOptionsProperty` or undefined


      .. py:attribute:: clusterJdbcurl

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.ClusterJDBCURL``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-clusterjdbcurl


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: copyCommand

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.CopyCommand``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-copycommand


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.CopyCommandProperty`


      .. py:attribute:: password

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.Password``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-password


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: processingConfiguration

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.ProcessingConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-processingconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ProcessingConfigurationProperty` or undefined


      .. py:attribute:: roleArn

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3Configuration

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.S3Configuration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-s3configuration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.S3DestinationConfigurationProperty`


      .. py:attribute:: username

         ``DeliveryStreamResource.RedshiftDestinationConfigurationProperty.Username``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-redshiftdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration-username


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: S3DestinationConfigurationProperty



      .. py:attribute:: bucketArn

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.BucketARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-bucketarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: bufferingHints

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.BufferingHints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-bufferinghints


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.BufferingHintsProperty`


      .. py:attribute:: cloudWatchLoggingOptions

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.CloudWatchLoggingOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-cloudwatchloggingoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.CloudWatchLoggingOptionsProperty` or undefined


      .. py:attribute:: compressionFormat

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.CompressionFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-compressionformat


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: encryptionConfiguration

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.EncryptionConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-encryptionconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.EncryptionConfigurationProperty` or undefined


      .. py:attribute:: prefix

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.Prefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-prefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: roleArn

         ``DeliveryStreamResource.S3DestinationConfigurationProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-s3destinationconfiguration.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SplunkDestinationConfigurationProperty



      .. py:attribute:: cloudWatchLoggingOptions

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.CloudWatchLoggingOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-cloudwatchloggingoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.CloudWatchLoggingOptionsProperty` or undefined


      .. py:attribute:: hecAcknowledgmentTimeoutInSeconds

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.HECAcknowledgmentTimeoutInSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-hecacknowledgmenttimeoutinseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hecEndpoint

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.HECEndpoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-hecendpoint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: hecEndpointType

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.HECEndpointType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-hecendpointtype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: hecToken

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.HECToken``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-hectoken


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: processingConfiguration

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.ProcessingConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-processingconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ProcessingConfigurationProperty` or undefined


      .. py:attribute:: retryOptions

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.RetryOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-retryoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.SplunkRetryOptionsProperty` or undefined


      .. py:attribute:: s3BackupMode

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.S3BackupMode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-s3backupmode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: s3Configuration

         ``DeliveryStreamResource.SplunkDestinationConfigurationProperty.S3Configuration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkdestinationconfiguration.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration-s3configuration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.S3DestinationConfigurationProperty`


   .. py:class:: SplunkRetryOptionsProperty



      .. py:attribute:: durationInSeconds

         ``DeliveryStreamResource.SplunkRetryOptionsProperty.DurationInSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisfirehose-deliverystream-splunkretryoptions.html#cfn-kinesisfirehose-deliverystream-splunkretryoptions-durationinseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token`



DeliveryStreamResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DeliveryStreamResourceProps



   .. py:attribute:: deliveryStreamName

      ``AWS::KinesisFirehose::DeliveryStream.DeliveryStreamName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-deliverystreamname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deliveryStreamType

      ``AWS::KinesisFirehose::DeliveryStream.DeliveryStreamType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-deliverystreamtype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: elasticsearchDestinationConfiguration

      ``AWS::KinesisFirehose::DeliveryStream.ElasticsearchDestinationConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-elasticsearchdestinationconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ElasticsearchDestinationConfigurationProperty` or undefined


   .. py:attribute:: extendedS3DestinationConfiguration

      ``AWS::KinesisFirehose::DeliveryStream.ExtendedS3DestinationConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-extendeds3destinationconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.ExtendedS3DestinationConfigurationProperty` or undefined


   .. py:attribute:: kinesisStreamSourceConfiguration

      ``AWS::KinesisFirehose::DeliveryStream.KinesisStreamSourceConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-kinesisstreamsourceconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.KinesisStreamSourceConfigurationProperty` or undefined


   .. py:attribute:: redshiftDestinationConfiguration

      ``AWS::KinesisFirehose::DeliveryStream.RedshiftDestinationConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-redshiftdestinationconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.RedshiftDestinationConfigurationProperty` or undefined


   .. py:attribute:: s3DestinationConfiguration

      ``AWS::KinesisFirehose::DeliveryStream.S3DestinationConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-s3destinationconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.S3DestinationConfigurationProperty` or undefined


   .. py:attribute:: splunkDestinationConfiguration

      ``AWS::KinesisFirehose::DeliveryStream.SplunkDestinationConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisfirehose-deliverystream.html#cfn-kinesisfirehose-deliverystream-splunkdestinationconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisfirehose.cloudformation.DeliveryStreamResource.SplunkDestinationConfigurationProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-kinesisfirehose

